--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="menu">
         <a href="#home">José A. Eyzaguirre</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="path-to-your-cv.pdf" download>CV</a>
+        <a href="files/CV.pdf" download>CV</a>
     </div>
     
     <div id="leftside">
