--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="menu">
         <a href="#home">José A. Eyzaguirre</a>
         <a href="#portfolio">Portfolio</a>
-        <a href="files/CV.pdf" download>CV</a>
+        <a href="https://drive.google.com/file/d/1pcUrYSae6bB9p_768dSzispY6cftNNnt/view?usp=sharing" download>CV</a>
     </div>
     
     <div id="leftside">
